[gd_scene load_steps=5 format=3 uid="uid://dbmhqblcfnapj"]

[ext_resource type="Script" uid="uid://djahbmebhqcr7" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Composite/ElementMorphologyCompositeView.gd" id="1_nh6j0"]
[ext_resource type="PackedScene" uid="uid://boj8wsv76jqlm" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iField.tscn" id="1_op66g"]
[ext_resource type="PackedScene" uid="uid://bua3t8kprcx3n" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector2iField.tscn" id="3_i80nu"]
[ext_resource type="Script" uid="uid://c3kgtsjp4sogl" path="res://BrainVisualizer/UI/GenericElements/DropDown/MorphologyDropDown.gd" id="5_1jdcn"]

[node name="ElementMorphologyCompositeView" type="VBoxContainer"]
size_flags_horizontal = 4
script = ExtResource("1_nh6j0")

[node name="Seed" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Seed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Seed:"

[node name="Seed_Vector" parent="Seed" instance=ExtResource("1_op66g")]
layout_mode = 2

[node name="spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Patterns:"

[node name="Patterns" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="X" type="HBoxContainer" parent="Patterns"]
layout_mode = 2

[node name="Label" type="Label" parent="Patterns/X"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pattern X:"

[node name="X" parent="Patterns/X" instance=ExtResource("3_i80nu")]
layout_mode = 2
label_x_text = &"C"
label_y_text = &"S"
int_x_min = 1
int_y_min = 0
initial_vector = Vector2i(1, 0)

[node name="Y" type="HBoxContainer" parent="Patterns"]
layout_mode = 2

[node name="Label" type="Label" parent="Patterns/Y"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pattern Y:"

[node name="Y" parent="Patterns/Y" instance=ExtResource("3_i80nu")]
layout_mode = 2
label_x_text = &"C"
label_y_text = &"S"
int_x_min = 1
int_y_min = 0
initial_vector = Vector2i(1, 0)

[node name="Z" type="HBoxContainer" parent="Patterns"]
layout_mode = 2

[node name="Label" type="Label" parent="Patterns/Z"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pattern Z:"

[node name="Z" parent="Patterns/Z" instance=ExtResource("3_i80nu")]
layout_mode = 2
label_x_text = &"C"
label_y_text = &"S"
int_x_min = 1
int_y_min = 0
initial_vector = Vector2i(1, 0)

[node name="mapper" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="mapper"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mapped Morphology:"

[node name="MorphologyDropDown" type="OptionButton" parent="mapper"]
layout_mode = 2
script = ExtResource("5_1jdcn")
